--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="features-container">
     <section>
       <ul class="features">
-        <li>
+        <li class="item">
           <h3 class="title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
           <p class="second-text-title">
             Идейные соображения, а также начало повседневной работы по
@@ -50,7 +50,7 @@
           </p>
         </li>
 
-        <li>
+        <li class="item">
           <h3 class="title">ПУНКТУАЛЬНОСТЬ</h3>
           <p class="second-text-title">
             Задача организации, в особенности же рамки и место обучения кадров
@@ -58,7 +58,7 @@
           </p>
         </li>
 
-        <li>
+        <li class="item">
           <h3 class="title">ПЛАНИРОВАНИЕ</h3>
           <p class="second-text-title">
             Равным образом консультация с широким активом в значительной
@@ -66,7 +66,7 @@
           </p>
         </li>
 
-        <li>
+        <li class="item">
           <h3 class="title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
           <p class="second-text-title">
             Значимость этих проблем настолько очевидна, что реализация
@@ -78,7 +78,7 @@
     </section>
 
     <!-- Чем мы занимаемся -->
-    <div class="features-container">
+    <div class="our-job-container">
     <section>
       <h2 class="our-job">Чем мы занимаемся</h2>
       <ul>
