--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
   <!-- Шапка сайта -->
   <header class="page-header">
-    <div class="main-nav">  
-    <nav class="container main-nav">
+    <div class="container">  
+    <nav class="main-nav">
       <a href="./index.html" class="logo"> <span class="color-logo">Web</span>Studio</a>
       <ul class="site-nav list">
         <li class="item"><a href="" class="link current" >Студия</a></li>
@@ -35,12 +35,16 @@
   <main>
     <!-- Герой -->
     <section class="hero-title">
+      <div class="container">
       <h1 class="hero-title-text">ЭФФЕКТИВНЫЕ РЕШЕНИЯ<br>ДЛЯ ВАШЕГО БИЗНЕСА</h1>
       <button type= “ ” class="button">Заказать услугу</button> 
+      </div>
     </section> 
+      
     <!-- Приемущества -->
     <div class="features-container">
     <section>
+      <div class="container">
       <ul class="features">
         <li class="item">
           <h3 class="title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
@@ -78,22 +82,23 @@
     </section>
 
     <!-- Чем мы занимаемся -->
-    <div class="our-job-container">
     <section>
+      <div class="container">
       <h2 class="our-job">Чем мы занимаемся</h2>
-      <ul>
-        <li class="photo"><img src="./images/photo1.jpg" alt="Написание кода" width="370" /></li>
-        <li class="photo"><img src="./images/photo2.jpg" alt="Разработка" width="370" /></li>
-        <li class="photo"><img src="./images/photo3.jpg" alt="Веб дизайн" width="370" /></li>
+      <ul class="our-job-flex">
+        <li class="photo-job"><img src="./images/photo1.jpg" alt="Написание кода" width="370" /></li>
+        <li class="photo-job"><img src="./images/photo2.jpg" alt="Разработка" width="370" /></li>
+        <li class="photo-job"><img src="./images/photo3.jpg" alt="Веб дизайн" width="370" /></li>
       </ul>
-    </div>
+      </div>
     </section>
 
     <!-- Наша команда -->
     <div class="team-section-bg-color-outside" >
     <section class="team-section-bg-color">
+      <div class="container">
       <h2 class="team-section">Наша команда</h2>
-      <ul class="photo-padding">
+      <ul class="photo-team">
         <li class="photo">
           <img src="./images/member1.jpg" alt="Член нашей команды" width="270" />
           <h3 class="name-member-section">Игорь Демьяненко</h3>
@@ -120,12 +125,12 @@
       </ul>
     </div>
     </section>
+    </div>
   </main>
 
   <!-- Футер -->
   <div class="footer-bg">
   <footer class="footer-section">
-
     <a href="./index.html" class=" logo "> <span class="color-logo">Web</span><span class="color-logo-footer">Studio</span> </a>
     <address class="address-section">г. Киев, пр-т Леси Украинки, 26</address>
     <a href="mailto:info@example.com" class="contact-footer-section">info@example.com</a>
