--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </section> 
       
     <!-- Приемущества -->
-    <div class="features-container">
+    
     <section>
       <div class="container">
       <ul class="features">
@@ -129,14 +129,18 @@
   </main>
 
   <!-- Футер -->
-  <div class="footer-bg">
+  
   <footer class="footer-section">
+    <div class="container">
     <a href="./index.html" class=" logo "> <span class="color-logo">Web</span><span class="color-logo-footer">Studio</span> </a>
     <address class="address-section">г. Киев, пр-т Леси Украинки, 26</address>
-    <a href="mailto:info@example.com" class="contact-footer-section">info@example.com</a>
-    <a href="tel:+380991111111" class="contact-footer-section" >+38 099 111 11 11</a>
-  </footer>
+    <ul class="contact-flex">
+    <li><a href="mailto:info@example.com" class="mail-footer-section">info@example.com</a></li>
+    <li><a href="tel:+380991111111" class="tel-footer-section" >+38 099 111 11 11</a></li>
+    </ul>
   </div>
+</footer>
+  
 </body>
 
 </html>
