--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   
   <footer class="footer-section">
     <div class="container">
-    <a href="./index.html" class=" logo "> <span class="color-logo">Web</span><span class="color-logo-footer">Studio</span> </a>
+    <a href="./index.html" class="logo-footer"> <span class="color-logo">Web</span><span class="color-logo-footer">Studio</span> </a>
     <address class="address-section">г. Киев, пр-т Леси Украинки, 26</address>
     <ul class="contact-flex">
     <li><a href="mailto:info@example.com" class="mail-footer-section">info@example.com</a></li>
