--- a/portfolio.html
+++ b/portfolio.html
@@ -124,12 +124,16 @@
     
     <footer class="footer-section">
       <div class="container">
-      <a href="./index.html" class=" logo "> <span class="color-logo">Web</span><span class="color-logo-footer">Studio</span> </a>
+        <div class="footer-items">
+      <a href="./index.html" class="logo-footer"> <span class="color-logo">Web</span><span class="color-logo-footer">Studio</span> </a>
       <address class="address-section">г. Киев, пр-т Леси Украинки, 26</address>
       <ul class="contact-flex">
-      <li><a href="mailto:info@example.com" class="mail-footer-section">info@example.com</a></li>
-      <li><a href="tel:+380991111111" class="tel-footer-section" >+38 099 111 11 11</a></li>
+        <li class="contact-item">
+          <a href="mailto:info@example.com" class="contact-footer">info@example.com</a></li>
+        <li class="contact-item">
+          <a href="tel:+380991111111" class="contact-footer" >+38 099 111 11 11</a></li>
       </ul>
+    </div>
     </div>
   </footer>
       
