--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
   <main>
     <!-- Герой -->
-    <section class="hero-title">
+    <section class="hero">
       <div class="container">
-      <h1 class="hero-title-text">ЭФФЕКТИВНЫЕ РЕШЕНИЯ<br>ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+      <h1 class="hero-text">ЭФФЕКТИВНЫЕ РЕШЕНИЯ<br>ДЛЯ ВАШЕГО БИЗНЕСА</h1>
       <button type= “ ” class="button">Заказать услугу</button> 
       </div>
     </section> 
