--- a/portfolio.html
+++ b/portfolio.html
@@ -51,64 +51,81 @@
         <li class="photo-portfolio"> 
           <a href="" class="photo-decoration">
             <img src="./images/project1.jpg" alt="Технокряк" width="370">
+              <div class="content-size">
             <h2 class="content-header">Технокряк</h2>
             <p class="second-content-header">Веб-сайт</p>
+            </div>
           </a>
         </li>
 
         <li class="photo-portfolio"> 
           <a href="" class="photo-decoration"><img src="./images/project2.jpg" alt="Постер New Orlean vs Golden Star" width="370">
+            <div class="content-size">
           <h2 class="content-header">Постер New Orlean vs Golden Star</h2>
           <p class="second-content-header">Дизайн</p>
+          </div>
         </a>
         </li>
 
         <li class="photo-portfolio"> 
           <a href="" class="photo-decoration"><img src="./images/project3.jpg" alt="Ресторан Seafood" width="370">
+            <div class="content-size">
           <h2 class="content-header">Ресторан Seafood</h2>
           <p class="second-content-header">Приложение</p>
-        </a>
+          </div>
         </li>
 
         <li class="photo-portfolio"> 
           <a href="" class="photo-decoration"><img src="./images/project4.jpg" alt="Проект Prime" width="370">
+            <div class="content-size">
           <h2 class="content-header">Проект Prime</h2>
           <p class="second-content-header">Маркетинг</p>
+          </div>
         </a>
         </li>
         
         <li class="photo-portfolio"> 
           <a href="" class="photo-decoration"><img src="./images/project5.jpg" alt="Проект Boxes" width="370">
+            <div class="content-size">
           <h2 class="content-header">Проект Boxes</h2>
           <p class="second-content-header">Приложение</p>
+          </div>
         </a>
         </li>
 
         <li class="photo-portfolio" > 
           <a href="" class="photo-decoration"> <img src="./images/project6.jpg" alt="Inspiration has no Borders" width="370">
+            <div class="content-size">
           <h2 class="content-header">Inspiration has no Borders</h2>
           <p class="second-content-header">Веб-сайт</p>
+            </div>
         </a>
         </li>
 
         <li class="photo-portfolio"> 
           <a href="" class="photo-decoration"><img src="./images/project7.jpg" alt="Издание Limited Edition" width="370">
+            <div class="content-size">
           <h2 class="content-header">Издание Limited Edition</h2>
           <p class="second-content-header">Дизайн</p>
+          </div>
         </a>
         </li>
 
         <li class="photo-portfolio">
            <a href="" class="photo-decoration"><img src="./images/project8.jpg" alt="Проект LAB" width="370">
+            <div class="content-size">
           <h2 class="content-header">Проект LAB</h2>
           <p class="second-content-header">Маркетинг</p>
+          </div>
         </a>
         </li>
 
         <li class="photo-portfolio"> 
           <a href="" class="photo-decoration"><img src="./images/project9.jpg" alt="Growing Business" width="370">
+            <div class="content-size">
           <h2 class="content-header">Growing Business</h2>
           <p class="second-content-header">Приложение</p>
+          </div>
         </a>
         </li>
          </ul>
