исправления после проверки 1

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
       
     <!-- Приемущества -->
     
-    <section>
+    <section class="features-section">
       <div class="container">
       <ul class="features">
-        <li class="item">
+        <li class="features-item">
           <h3 class="title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
           <p class="second-text-title">
             Идейные соображения, а также начало повседневной работы по
@@ -54,7 +54,7 @@
           </p>
         </li>
 
-        <li class="item">
+        <li class="features-item">
           <h3 class="title">ПУНКТУАЛЬНОСТЬ</h3>
           <p class="second-text-title">
             Задача организации, в особенности же рамки и место обучения кадров
@@ -62,7 +62,7 @@
           </p>
         </li>
 
-        <li class="item">
+        <li class="features-item">
           <h3 class="title">ПЛАНИРОВАНИЕ</h3>
           <p class="second-text-title">
             Равным образом консультация с широким активом в значительной
@@ -70,7 +70,7 @@
           </p>
         </li>
 
-        <li class="item">
+        <li class="features-item">
           <h3 class="title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
           <p class="second-text-title">
             Значимость этих проблем настолько очевидна, что реализация
@@ -82,7 +82,7 @@
     </section>
 
     <!-- Чем мы занимаемся -->
-    <section>
+    <section class="our-job-section">
       <div class="container">
       <h2 class="our-job">Чем мы занимаемся</h2>
       <ul class="our-job-flex">
@@ -101,26 +101,34 @@
       <ul class="photo-team">
         <li class="photo">
           <img src="./images/member1.jpg" alt="Член нашей команды" width="270" />
-          <h3 class="name-member-section">Игорь Демьяненко</h3>
-          <p class="second-text-team">Product Designer</p>
+            <div class="team-text-size">
+              <h3 class="name-member-section">Игорь Демьяненко</h3>
+              <p class="second-text-team">Product Designer</p>
+            </div>
         </li>
 
         <li class="photo">                                         
           <img src="./images/member2.jpg" alt="Член нашей команды" width="270" />
-          <h3 class="name-member-section">Ольга Репина</h3>
-          <p class="second-text-team">Frontend Developer</p>
+            <div class="team-text-size">
+              <h3 class="name-member-section">Ольга Репина</h3>
+              <p class="second-text-team">Frontend Developer</p>
+            </div>
         </li>
 
         <li class="photo">
           <img src="./images/member3.jpg" alt="Член нашей команды" width="270" />
-          <h3 class="name-member-section">Николай Тарасов</h3>
-          <p class="second-text-team">Marketing</p>
+            <div class="team-text-size">
+              <h3 class="name-member-section">Николай Тарасов</h3>
+              <p class="second-text-team">Marketing</p>
+            </div>
         </li>
 
         <li class="photo">
           <img src="./images/member4.jpg" alt="Член нашей команды" width="270" />
-          <h3 class="name-member-section">Михаил Ермаков</h3>
-          <p class="second-text-team">UI Designer</p>
+            <div class="team-text-size">
+              <h3 class="name-member-section">Михаил Ермаков</h3>
+              <p class="second-text-team">UI Designer</p>
+            </div>
         </li>
       </ul>
     </div>
